--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
 <head>
-    <script src="./js/color-modes.js"></script>
+
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +13,11 @@
 
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/sticky-footer.css" rel="stylesheet">
+
+    <script src="./js/color-modes.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <script src="./js/color-modes.js"></script>
+
 
     <style>
         .bd-placeholder-img {
@@ -29,7 +34,7 @@
             }
         }
 
-        .b-example-divider {
+        .b-divider {
             width: 100%;
             height: 1rem;
             background-color: rgba(0, 0, 0, .1);
@@ -153,148 +158,151 @@
 <!--Koniec sekcji odpowiedzialnej za dark theme-->
 
 
-<header>
-    <div class="container py-3">
-        <div class="d-flex flex-column flex-md-row align-items-center justify-content-between pb-3 mb-4 border-bottom">
+<header>   <!--Nagłówek-->
+    <div class="container py-3">    <!--Kontener na header-->
+        <div class="d-flex flex-column flex-md-row align-items-center justify-content-between pb-3 mb-4 border-bottom"> <!--Nawigacja-->
             <a class="d-flex align-items-center link-body-emphasis text-decoration-none" href="">
                 <img class="me-3" src="./brand/icons8-location-94.png" alt="" width="40" height="40">
                 <span class="fs-4">Aplikacja podróżnicza</span>
             </a>
 
-            <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#recomended-destinations">Propozycje destynacji</a>
+            <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto"> <!--Nawigacja-->
+                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#recomended-destinations">Propozycje
+                    destynacji</a>
                 <a class="py-2 link-body-emphasis text-decoration-none" href="#travel-diary">Dziennik podróży</a>
-            </nav>
+            </nav>  <!--Koniec nawigacji-->
+        </div>  <!--Koniec nawigacji-->
+
+        <div id="app_head" class="pricing-header p-3 pb-md-4 mx-auto text-center">
+            <h1 class="display-4 fw-normal text-body-emphasis">Cześć!</h1>
+            <p class="fs-5 text-body-secondary">{{ message }}</p>
         </div>
 
-        <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-            <h1 class="display-4 fw-normal text-body-emphasis">Cześć!</h1>
-            <p class="fs-5 text-body-secondary">Witamy Cię w asystencie planowania twojej kolejnej podróży. Podaj nam
-                odpowidzi na nasze
-                pytania z formularza poniżej, a postaramy się zaproponować destynację twojej kolejnej podróży
-                odpowiadającą twoim wymaganiom.</p>
-        </div>
-    </div>
+    </div> <!--Koniec kontenera na header-->
 </header>
 
-<main>
+<main>  <!--Główna część strony-->
 
-
-    <div class="b-example-divider"></div>
+    <div class="b-divider"></div>
 
     <div class="col-lg-6 col-xxl-4 my-5 mx-auto">
 
-        <form class="needs-validation">
+        <div id="app">  <!--Sekcja odpowiedzialna za formularz z propozycjami-->
 
-            <div class="row g-3">
-                <a id="recomended-destinations"></a>
-                <h3 class="mb-1">Preferencje</h3>
+            <form class="needs-validation" @submit="submitForm">
 
-                <div class="col-sm-6">
-                    <label for="firstName" class="form-label">Imię</label>
-                    <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                <div class="row g-3">
+                    <a id="recomended-destinations"></a>
+                    <h3 class="mb-1">Preferencje</h3>
 
-                </div>
-
-                <div class="col-sm-6">
-                    <label for="email" class="form-label">E-Mail</label>
-                    <input type="text" class="form-control" id="email" placeholder="" value="" required>
-                </div>
-
-                <div class="col-12">
-                    <label for="username" class="form-label">Nazwa w instagram (Funkcjonalność testowa, dla przyszłych
-                        rozwiązań z AI)</label>
-                    <div class="input-group">
-                        <span class="input-group-text">@</span>
-                        <input type="text" class="form-control" id="username"
-                               placeholder="Nazwa użytkownika (niewymagana)">
+                    <div class="col-sm-6">
+                        <label for="firstName" class="form-label">Imię</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
 
                     </div>
 
-                    <!--                <hr class="mt-4">-->
-
-
-                    <div class="col-12">
-                        <label for="country" class="form-label">Preferowany miesiąc podróży</label>
-                        <select class="form-select" id="country" required>
-                            <option value="">Wybierz miesiąc...</option>
-                            <option>Styczeń</option>
-                            <option>Luty</option>
-                            <option>Marzec</option>
-                            <option>Kwiecień</option>
-                            <option>Maj</option>
-                            <option>Czerwiec</option>
-                            <option>Lipiec</option>
-                            <option>Sierpień</option>
-                            <option>Wrzesień</option>
-                            <option>Październik</option>
-                            <option>Listopad</option>
-                            <option>Grudzień</option>
-                        </select>
-                        <div class="invalid-feedback">
-                            Proszę wybierz właściwy miesiąc.
-                        </div>
+                    <div class="col-sm-6">
+                        <label for="email" class="form-label">E-Mail</label>
+                        <input type="text" class="form-control" id="email" placeholder="" value="" required>
                     </div>
 
                     <div class="col-12">
-                        <label for="state" class="form-label">Główny cel podróży</label>
-                        <select class="form-select" id="state" required>
-                            <option value="">Wybierz główny cel podróży...</option>
-                            <option>Cena</option>
-                            <option>Kuchnia</option>
-                            <option>Kultura</option>
-                            <option>Natura</option>
-                            <option>Podróż</option>
-                            <option>Przygoda</option>
-                            <option>Relaks</option>
-                        </select>
-                        <div class="invalid-feedback">
-                            Wymagane podanie celu podróży.
+                        <label for="username" class="form-label">Nazwa w instagram (Funkcjonalność testowa, dla
+                            przyszłych
+                            rozwiązań z AI)</label>
+                        <div class="input-group">
+                            <span class="input-group-text">@</span>
+                            <input type="text" class="form-control" id="username"
+                                   placeholder="Nazwa użytkownika (niewymagana)">
+
+                        </div>
+
+                        <div class="col-12">
+                            <label for="country" class="form-label">Preferowany miesiąc podróży</label>
+                            <select class="form-select" id="country" required>
+                                <option value="">Wybierz miesiąc...</option>
+                                <option>Styczeń</option>
+                                <option>Luty</option>
+                                <option>Marzec</option>
+                                <option>Kwiecień</option>
+                                <option>Maj</option>
+                                <option>Czerwiec</option>
+                                <option>Lipiec</option>
+                                <option>Sierpień</option>
+                                <option>Wrzesień</option>
+                                <option>Październik</option>
+                                <option>Listopad</option>
+                                <option>Grudzień</option>
+                            </select>
+                            <div class="invalid-feedback">
+                                Proszę wybierz właściwy miesiąc.
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <label for="state" class="form-label">Główny cel podróży</label>
+                            <select class="form-select" id="state" required>
+                                <option value="">Wybierz główny cel podróży...</option>
+                                <option>Cena</option>
+                                <option>Kuchnia</option>
+                                <option>Kultura</option>
+                                <option>Natura</option>
+                                <option>Podróż</option>
+                                <option>Przygoda</option>
+                                <option>Relaks</option>
+                            </select>
+                            <div class="invalid-feedback">
+                                Wymagane podanie celu podróży.
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <label for="zip" class="form-label">Dodatkowy cel podróży</label>
+
+                            <select class="form-select" id="zip" required>
+                                <option value="">Wybierz dodatkowy cel podróży...</option>
+                                <option value="">Wybierz główny cel podróży...</option>
+                                <option>Cena</option>
+                                <option>Kuchnia</option>
+                                <option>Kultura</option>
+                                <option>Natura</option>
+                                <option>Podróż</option>
+                                <option>Przygoda</option>
+                                <option>Relaks</option>
+                            </select>
+                            <div class="invalid-feedback">
+                                Wymagane wybranie celu podróży.
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-12">
-                        <label for="zip" class="form-label">Dodatkowy cel podróży</label>
 
-                        <select class="form-select" id="zip" required>
-                            <option value="">Wybierz dodatkowy cel podróży...</option>
-                            <option value="">Wybierz główny cel podróży...</option>
-                            <option>Cena</option>
-                            <option>Kuchnia</option>
-                            <option>Kultura</option>
-                            <option>Natura</option>
-                            <option>Podróż</option>
-                            <option>Przygoda</option>
-                            <option>Relaks</option>
-                        </select>
-                        <div class="invalid-feedback">
-                            Wymagane wybranie celu podróży.
-                        </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="privacy-accept" v-model="privacyAccepted">
+                        <label class="form-check-label" for="privacy-accept">Akceptuję politykę prywatności</label>
                     </div>
+                    <button class="btn btn-primary" type="submit">Zaproponuj destynacje</button>
+
                 </div>
-
-
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="privacy-accept">
-                    <label class="form-check-label" for="privacy-accept">Akceptuję politykę prywatności</label>
-                </div>
-                <button class="btn btn-primary" type="submit">Zaproponuj destynacje</button>
-
-            </div>
-        </form>
+            </form>
+        </div>  <!--Koniec sekcji odpowiedzialnej za formularz z propozycjami-->
     </div>
 
 
-    <div class="b-example-divider"></div>
+    <div class="b-divider"></div>
 
+<!--Sekcja odpowiedzialna za dziennik podróżniczy-->
     <div class="d-flex gap-2 justify-content-center py-5">
-        <div id="app" class="container">
+        <div id="app2" class="container">
             <a id="travel-diary"></a>
             <h3>Dziennik podróży</h3>
 
-            <div class="py-3"></div>
+            <div class="py-3"></div>    <!--Przerwa między nagłówkiem a formularzem-->
 
+            <!--Formularz - zbieranie danych-->
             <form class="needs-validation" v-if="!editingItem" @submit.prevent="addItem">
+
+                <!--Wybór kontynentu z listy rozwijanej-->
                 <label for="continent" class="form-label my-1">Kontynent:</label>
                 <select id="continent" class="form-select" v-model="newItem.continent" required>
                     <option value="Europa">Europa</option>
@@ -304,11 +312,14 @@
                     <option value="Afryka">Afryka</option>
                     <option value="Australia">Australia</option>
                 </select>
+                <!--Koniec Wyboru kontynentu z listy rozwijanej-->
 
+                <!--Podanie kraju-->
                 <label for="country" class="form-label my-1">Kraj:</label>
                 <input type="text" id="country" class="form-control" v-model="newItem.country" required>
+                <!--Koniec podawania kraju-->
 
-
+                <!--Wybór celu podróży-->
                 <label for="travelPurpose" class="form-label my-1">Cel Podróży:</label>
                 <select id="travelPurpose" class="form-select" v-model="newItem.travelPurpose" required>
                     <option value="Biznes">Biznes</option>
@@ -320,6 +331,9 @@
                     <option value="Przygoda">Przygoda</option>
                     <option value="Relaks">Relaks</option>
                 </select>
+                <!--Koniec wyboru celu podróży-->
+
+                <!--Wybór miesiąca podróży-->
                 <label for="month" class="form-label my-1">Miesiąc:</label>
                 <select id="month" class="form-select" v-model="newItem.month" required>
                     <option value="Styczeń">Styczeń</option>
@@ -335,10 +349,19 @@
                     <option value="Listopad">Listopad</option>
                     <option value="Grudzień">Grudzień</option>
                 </select>
+                <!--Koniec wyboru miesiąca podróży-->
+
+                <!--Podanie kosztu podróży-->
                 <label for="cost" class="form-label my-1">Koszt:</label>
                 <input type="number" id="cost" class="form-control" v-model="newItem.cost" required>
+                <!--Koniec podawania kosztu podróży-->
+
+                <!--Przycisk dodawania podróży do bazy-->
                 <button class="btn btn-primary col-xxl-5 my-5 mx-auto d-grid gap-2" type="submit">Dodaj</button>
-            </form>
+                <!--Koniec przycisku dodawania podróży do bazy-->
+            </form> <!--Koniec formularza - zbieranie danych-->
+
+            <!--Formularz - edycja danych-->
             <form class="needs-validation" v-if="editingItem" @submit.prevent="updateItem">
                 <label for="continent" class="form-label">Kontynent:</label>
                 <select id="continent" class="form-select" v-model="editingItem.continent" required>
@@ -385,13 +408,12 @@
                 <input type="number" id="cost" class="form-control" v-model="editingItem.cost" required>
                 <button class="btn btn-primary" type="submit">Zapisz</button>
                 <button class="btn btn-secondary" @click="cancelEdit">Anuluj</button>
-            </form>
+            </form> <!--Koniec formularza - edycja danych-->
 
 
+            <div class="py-1"></div>    <!--Przerwa między formularzem a tabelą-->
 
-            <div class="py-1"></div>
-
-            <table class="table">
+            <table class="table">   <!--Tabela z historią podróży-->
                 <thead>
                 <tr>
                     <th>ID</th>
@@ -420,43 +442,31 @@
                     </td>
                 </tr>
                 </tbody>
-            </table>
+            </table>    <!--Koniec tabeli z historią podróży-->
+
+            <!--Obliczanie łącznego kosztu wszytkich podróży-->
             <p class="mt-3">Łączny koszt podróży: {{ totalCostComputed }} PLN</p>
 
         </div>
     </div>
+<!--Koniec sekcji odpowiedzialnej za dziennik podróżniczy-->
 
 
 
-    <div class="b-example-divider"></div>
+</main> <!--Koniec głównej części strony-->
 
 
-
-
-
-    <div class="d-flex gap-2 justify-content-center py-5">
-chwilowo place holder
-    </div>
-
-    <div class="b-example-divider"></div>
-
-
-
-</main>
-
-<footer class="footer mt-auto py-3 bg-body-tertiary text-center">
+<footer class="footer mt-auto py-3 bg-body-tertiary text-center">   <!--Stopka-->
     <div class="container">
         <span>Wszelkie prawa zastrzeżone &copy; 2022–echo date("Y"); Henson&CO</span>
     </div>
-</footer>
+</footer>   <!--Koniec stopki-->
 
 
 <script src="./js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 <script src="./js/app.js"></script>
-<script>
 
-</script>
 
 </body>
 </html>
